# kibana-py

./: .env.otel.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  PUBLISHING_GUIDE.md  README.md  SECURITY.md  bootstrap.sh  dod.config  kibana.otel.yaml.example  local-stack.sh  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: flake_rate.py
.github/workflows/: checks.yml  docs.yml  integration-probe.yml  methodology-sync.yml  pre-commit-autoupdate.yml  release.yml  test.yml
docs/: requirements.txt
docs/evidence/: cross-arch-x86_64-0.3.1.md  dod-audit-setuptools-alignment.md  examples-0.3.1.md
docs/source/: changelog.md  conf.py  index.rst  installation.md  quickstart.md
elastic-start-local/: .env.example  docker-compose.apm.yml  start.sh
examples/: README.md  actions_management.py  agent_builder_management.py  alerting_management.py  apm_management.py  async_comprehensive.py  async_example.py  async_index_connector.py  async_simple_status.py  attack_discovery_management.py  basic_usage.py  cases_management.py  connector_management.py  connectors_management.py  dashboards_management.py  data_views_management.py  debug_connector.py  debug_saved_objects.py  debug_spaces.py  debug_status.py  detection_engine_management.py  endpoint_management.py  entity_analytics_management.py  error_handling.py  exception_lists_management.py  fleet_agents_management.py  fleet_enrollment_management.py  fleet_epm_management.py  fleet_management.py  fleet_outputs_management.py  fleet_policies_management.py  lists_management.py  logstash_management.py  maintenance_windows_management.py  ml_management.py  observability_ai_assistant_management.py  osquery_management.py  saved_objects_management.py  security_ai_assistant_management.py  security_management.py  (+20 more)
examples/tests/: test_example_utils.py
kibana/: __init__.py  _rate_limiter.py  _utils.py  _version.py  exceptions.py  logging.py  serializer.py
kibana/_async/: __init__.py
kibana/_sync/: __init__.py
kibana/observability/: __init__.py  _config.py  _exporters.py  _imports.py  _logging.py  _tracing.py  _validation.py
scripts/: ci-stack-up.sh  upgrade-base-build-tools.sh
scripts/checks/: check-commit-trailer.sh  check-diagrams-rendered.sh  check-no-private-identifiers.sh  check-no-tracked-secrets.sh  definition-of-done.sh
skills/acceptance-tests-observable-outcomes/: SKILL.md
skills/additive-default-off-feature-flags/: SKILL.md
skills/adversarial-lens-review/: SKILL.md
skills/autonomous-self-improvement-loop-safety/: SKILL.md
skills/battle-testing-on-real-infra/: SKILL.md
skills/configuration-single-source-of-truth/: SKILL.md
skills/currency-and-audit-before-trust/: SKILL.md
skills/decision-memory/: SKILL.md
skills/definition-of-done-tooling/: SKILL.md
skills/dev-environment-facade/: SKILL.md  vocabulary-conformance.sh  vocabulary.txt
skills/docs-as-deliverable/: SKILL.md
skills/environment-research/: SKILL.md
skills/evidence-over-deference/: SKILL.md
skills/grounded-verifiable-gates/: SKILL.md
skills/hexagonal-with-enforced-contracts/: SKILL.md
skills/honest-reframing-over-overclaiming/: SKILL.md
skills/parallel-agent-fan-out/: SKILL.md
skills/reversible-by-default-confirm-consequential/: SKILL.md
skills/secrets-and-teardown-discipline/: SKILL.md
skills/spec-driven-development/: SKILL.md
skills/structural-security-boundary/: SKILL.md
skills/surgical-changes-with-checkpoints/: SKILL.md
tests/: conftest.py
tests/benchmark/: conftest.py  test_space_performance.py  test_telemetry_performance.py
tests/integration/: OBSERVABILITY_TESTS.md  README.md  TEST_COVERAGE.md  conftest.py  run_integration_tests.sh  run_log_forwarding_tests.sh  run_observability_tests.sh  run_space_integration_tests.sh  test_actions_integration.py  test_agent_builder_integration.py  test_alerting_integration.py  test_apm_integration.py  test_async_actions_integration.py  test_async_saved_objects_integration.py  test_async_spaces_integration.py  test_async_status_integration.py  test_attack_discovery_integration.py  test_cases_integration.py  test_connectors_integration.py  test_dashboards_integration.py  test_data_views_integration.py  test_detection_engine_integration.py  test_end_to_end_observability_integration.py  test_endpoint_integration.py  test_entity_analytics_integration.py  test_example_telemetry_e2e.py  test_exception_lists_integration.py  test_fleet_agents_integration.py  test_fleet_enrollment_integration.py  test_fleet_epm_integration.py  test_fleet_integration.py  test_fleet_outputs_integration.py  test_fleet_policies_integration.py  test_kibana_integration.py  test_lists_integration.py  test_log_forwarding_integration.py  test_log_graceful_degradation_integration.py  test_log_trace_correlation_integration.py  test_logstash_integration.py  test_maintenance_windows_integration.py  (+23 more)
tests/unit/: conftest.py  test_actions_client.py  test_actions_client_space_support.py  test_agent_builder_client.py  test_alerting.py  test_alerting_client.py  test_apm_client.py  test_async_actions_client.py  test_async_agent_builder_client.py  test_async_alerting.py  test_async_alerting_client.py  test_async_apm_client.py  test_async_attack_discovery_client.py  test_async_base_client.py  test_async_cases_client.py  test_async_connectors_client.py  test_async_dashboards_client.py  test_async_data_views_client.py  test_async_detection_engine_client.py  test_async_endpoint_client.py  test_async_entity_analytics_client.py  test_async_exception_lists_client.py  test_async_fleet_agents_client.py  test_async_fleet_client.py  test_async_fleet_enrollment_client.py  test_async_fleet_epm_client.py  test_async_fleet_outputs_client.py  test_async_fleet_policies_client.py  test_async_kibana_client.py  test_async_lists_client.py  test_async_logstash_client.py  (+71 more)
(+188 files in other folders)
